--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -24,10 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rimberio Clinic</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Welcome to Rimberio Clinic, where compassionate care meets advanced medical solutions. Our clinic is dedicated to providing exceptional healthcare services to individuals and families in a professional, modern, and patient-centered environment. Whether you need a routine check-up, specialized consultation, or telemedicine appointment, we offer comprehensive healthcare tailored to your needs.
+
+      At Rimberio Clinic, we pride ourselves on our team of experienced doctors, state-of-the-art facilities, and a commitment to the highest standards of medical excellence. We ensure that every patient receives personalized attention, from diagnosis to treatment, ensuring a seamless healthcare experience.
+      
+      Visit us for expert medical care and a healthier tomorrow!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
